--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
+    "etherpad-lite-client": "^0.9.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "promise-mysql": "^5.0.3"
